# routes/api.php
@@ -9,11 +9,10 @@ use Illuminate\Support\Facades\Route;
 Route::post('register', [AuthController::class, 'register']);
 Route::post('login', [AuthController::class, 'login']);
 Route::middleware('auth:api')->get('user', [AuthController::class, 'getUser']);
-Route::middleware('auth:api')->get('user/{name}', [AuthController::class, 'getUserName']);
+Route::middleware('auth:api')->get('user/{search}', [AuthController::class, 'getUserSearch']);
 Route::middleware('auth:api')->put('user', [AuthController::class, 'updateUser']);
 
 Route::middleware('auth:api')->group(function () {
-    Route::get('chats', [ChatController::class, 'index']);
     Route::post('chats', [ChatController::class, 'create']);
     Route::get('chats/{id}', [ChatController::class, 'show']);
     
